integration/customer-mdm-service/salesforce/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>MdmRequestId__c</fullName>
        <label>Id de la solicitud (MDM)</label>
        <type>Text</type>
        <length>64</length>
        <externalId>true</externalId>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MdmId__c</fullName>
        <label>Cliente (MDM)</label>
        <type>Text</type>
        <length>64</length>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre propuesto</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Apellidos__c</fullName>
        <label>Apellidos propuestos</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email propuesto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono propuesto</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nacionalidad__c</fullName>
        <label>Nacionalidad propuesta</label>
        <type>Text</type>
        <length>3</length>
    </fields>
    <fields>
        <fullName>FechaNacimiento__c</fullName>
        <label>Fecha de nacimiento propuesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TipoDocumento__c</fullName>
        <label>Tipo de documento propuesto</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>NumeroDocumento__c</fullName>
        <label>Documento propuesto</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Cambios__c</fullName>
        <label>Qué cambia</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decisión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Pendiente</fullName><default>true</default><label>Pendiente</label></value>
                <value><fullName>Aprobada</fullName><default>false</default><label>Aprobada</label></value>
                <value><fullName>Rechazada</fullName><default>false</default><label>Rechazada</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo (si se rechaza)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aviso_Tipo__c</fullName>
        <label>Tipo de aviso</label>
        <description>Set, the Case is a reception notice (its Subject is the notice's text) — not a request: what reception must know about the contact. Salesforce is its master; the MDM projects it to the hotels.</description>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Informativo</fullName><default>false</default><label>Informativo</label></value>
                <value><fullName>Importante</fullName><default>false</default><label>Importante</label></value>
                <value><fullName>Bloqueante</fullName><default>false</default><label>Bloqueante</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aviso_Desde__c</fullName>
        <label>Aviso desde</label>
        <inlineHelpText>Vacío: desde siempre</inlineHelpText>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aviso_Hasta__c</fullName>
        <label>Aviso hasta</label>
        <inlineHelpText>Vacío: sin fecha de fin</inlineHelpText>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aviso_Mostrar_En__c</fullName>
        <label>Mostrar el aviso en</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Check-in</fullName><default>false</default><label>Check-in</label></value>
                <value><fullName>Check-out</fullName><default>false</default><label>Check-out</label></value>
                <value><fullName>Estancia</fullName><default>false</default><label>Estancia</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aviso_Activo__c</fullName>
        <label>Aviso activo</label>
        <inlineHelpText>Desmarcado (o el caso cerrado), recepción deja de verlo</inlineHelpText>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
    <fields>
        <fullName>MdmAvisoId__c</fullName>
        <label>Id del aviso (MDM)</label>
        <description>Set when the notice was written from the MDM's Clientes console: its upsert key. Empty for one created in Salesforce.</description>
        <type>Text</type>
        <length>64</length>
        <externalId>true</externalId>
        <unique>true</unique>
    </fields>
</CustomObject>